@@ -22,6 +22,8 @@ class expression : public list
     int find(atom a);
     /* give i'th atom */
     int get(unsigned int i, atom **a);
+    /* replace vars in vlist to ident in ilist. create a new expression */
+    int replace(stringlist *vlist, stringlist *ilist, expression **e);
 #ifdef DEBUG
     /* assumimg s has enough memory allocation */
     void print(char *s);
